# rust-diaries

./: Cargo.toml  readme.md
src/adv/: HashMap.rs  borsh.rs  copynclone.rs  debugMan.rs  debugnDis.rs  generics.rs  genericsoverstructs.rs  lifetimes.rs  macros.rs  multithread.rs  serde.rs  traits.rs  traitswithgenerics.rs
src/basics/: borrowing_and_references.rs  closures.rs  datatypes.rs  externalPackage.rs  loopsncon.rs  ownership.rs  stacknheap.rs  variables.rs
src/structs_enums/: enums.rs  enumval.rs  optionenum.rs  resultenum.rs  struct.rs
