[package]
name = "rust-diary"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "variables"
path = "src/basics/variables.rs"

[[bin]]
name = "datatypes"
path = "src/basics/datatypes.rs"

[[bin]]
name = "loopsncon"
path = "src/basics/loopsncon.rs"

[[bin]]
name = "stacknheap"
path = "src/basics/stacknheap.rs"

[[bin]]
name = "ownership"
path = "src/basics/ownership.rs"

[[bin]]
name = "struct"
path = "src/structs_enums/struct.rs"

[[bin]]
name = "borrowandref"
path = "src/basics/borrowing_and_references.rs"

[[bin]]
name = "enum"
path = "src/structs_enums/enums.rs"

[[bin]]
name = "enumval"
path = "src/structs_enums/enumval.rs"

[[bin]]
name = "resultenum"
path = "src/structs_enums/resultenum.rs"

[[bin]]
name = "optionenum"
path = "src/structs_enums/optionenum.rs"

[[bin]]
name = "externalPackage"
path = "src/basics/externalPackage.rs"

[[bin]]
name = "closures"
path = "src/basics/closures.rs"

[[bin]]
name = "genrics"
path = "src/adv/generics.rs"

[[bin]]
name = "genricsoverstructs"
path = "src/adv/genericsoverstructs.rs"

[[bin]]
name = "traits"
path = "src/adv/traits.rs"

[[bin]]
name = "traitsgen"
path = "src/adv/traitswithgenerics.rs"

[[bin]]
name = "macros"
path = "src/adv/macros.rs"

[[bin]]
name = "debugMan"
path = "src/adv/debugMan.rs"

[[bin]]
name = "debug"
path = "src/adv/debugnDis.rs"

[[bin]]
name = "copynclone"
path = "src/adv/copynclone.rs"

[[bin]]
name = "serde"
path = "src/adv/serde.rs"

[[bin]]
name = "borsh"
path = "src/adv/borsh.rs"

[dependencies]
borsh = { version = "1.5", features = ["derive"]}
chrono = "0.4.41"
dotenv = "0.15.0"
serde = {version = "1.0.219" , features = ["derive"]}
serde_json = "1.0.140"

